kubernetes/neo/apps/istio-gateways/ingress-privategateway/gateways/private-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private-gateway
spec:
  addresses:
  - value: istio-privategateway.istio-gateways.svc.cluster.local
    type: Hostname
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "*.neo.abasitt.tech"
    protocol: HTTP
    port: 80
  - name: https
    hostname: "*.neo.abasitt.tech"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: abasitt-tech-secret
    allowedRoutes:
      namespaces:
        from: All
